# ligia-group-challenge-2026

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
ligia-group-challenge-2026/: Makefile  README.md  pyproject.toml  requirements.txt
main/: app.py  preprocessing.py  teste_extrção_pdf_med.py
models/: best_model.pkl
notebooks/: 1.0_carregamento_dados.ipynb  1.1_analise_univariada.ipynb  1.1_verificacao_qualidade.ipynb  1.2_analise_bivariada.ipynb  1.2_analise_univariada.ipynb  1.3_analise_bivariada.ipynb  2.0_limpeza_dados.ipynb  2.0_verificacao_qualidade.ipynb  2.1_feature_engineering.ipynb  2.1_limpeza_dados.ipynb  2.2_feature_engineering.ipynb  3.0_treinamento_do_modelo.ipynb  3.1_comparacao_com_baseline.ipynb  3.1_comparação_com_baseline.ipynb  3.1_treinamento_do_modelo.ipynb  3.2_comparação_com_baseline.ipynb  limpeza-guilheme.ipynb
src/: app.py  data_loader.py  model_training.py  preprocessing.py  teste_extrção_pdf_med.py
src/static/: style.css
